[package]
name = "cosmogony2cities"
version = "0.1.0"
authors = ["antoine-de <antoine.desbordes@gmail.com>"]
edition = "2018"

[dependencies]
cosmogony = { version="*", git = "https://github.com/antoine-de/cosmogony.git", rev = "390c7bd06976c4b73e5cdecdcb04e6348d432a24" }
structopt = "0.2"
postgres = "0.15"
serde = "1.0"
serde_json = "1.0"
log = "0.4"
env_logger = "0.6"
failure = "0.1"
geo-types = "0.2"
itertools = "0.8"
wkt = "0.2"
