[package]
name = "cosmogony2cities"
version = "0.1.0"
authors = ["antoine-de <antoine.desbordes@gmail.com>"]
edition = "2018"
description = "Import cosmogony's cities into a postgresql database"
license = "Apache-2.0"

[dependencies]
#cosmogony = "0.5"
cosmogony = { git = "https://github.com/antoine-de/cosmogony.git", rev = "1719ea7e842dcec6c923218909a5dd77acd7baf1"}
structopt = "0.2"
postgres = "0.15"
serde = "1.0"
serde_json = "1.0"
log = "0.4"
env_logger = "0.6"
failure = "0.1"
geo-types = "0.2"
itertools = "0.8"
wkt = "0.2"
par-map = "0.1"

[dev-dependencies]
# Note: at the time of import the postgres docker image was not released, use crates.io version when it's done
testcontainers = { version="0.5", git = "https://github.com/testcontainers/testcontainers-rs", rev = "0ac4dcbb27482755cda752e76615e4e2e8aff211" }
