[package]
name = "cosmogony2cities"
version = "0.1.0"
authors = ["antoine-de <antoine.desbordes@gmail.com>"]
edition = "2018"
description = "Import cosmogony's cities into a postgresql database"
license = "Apache-2.0"

[dependencies]
cosmogony = "0.6"
structopt = "0.2"
postgres = "0.15"
serde = "1.0"
serde_json = "1.0"
log = "0.4"
env_logger = "0.6"
failure = "0.1"
geo-types = "0.4"
itertools = "0.8"
wkt = "0.5"
par-map = "0.1"

[dev-dependencies]
testcontainers = "0.7"
